# InnoID

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  gunicorn_config.py  requirements.txt
API/: Dockerfile  (+1 more)
Core/: Dockerfile  pyproject.toml
Core/innoid_core/: config.py  main_fastapi.py  settings.py
Core/innoid_core/api/: dependencies.py
Core/innoid_core/api/v2/: errors.py  fastapi_app.py  middlewares.py
Core/innoid_core/api/v2/admin/: errors.py  routers.py
Core/innoid_core/api/v2/app/: errors.py  models.py  routers.py
Core/innoid_core/domain/: errors.py  external_users.py
Core/innoid_core/domain/api_key/: errors.py  repositories.py  usecases.py
Core/innoid_core/domain/app/: errors.py  repositories.py  usecases.py
Core/innoid_core/domain/app_auth/: entities.py  repositories.py  usecases.py
Core/innoid_core/domain/connection/: entities.py  errors.py  repositories.py
Core/innoid_core/domain/identity/: usecases.py
Core/innoid_core/domain/permission/: entities.py  errors.py  repositories.py  usecases.py
Core/innoid_core/domain/user/: errors.py  repositories.py  usecases.py
Core/innoid_core/domain/user_auth/: entities.py  errors.py  repositories.py  usecases.py
Core/innoid_core/domain/user_identification/: errors.py  usecases.py
Core/innoid_core/infrastructure/: microsoft_ad_oauth.py  sso.py
Core/innoid_core/infrastructure/microsoft_ad/: external_users.py
Core/innoid_core/infrastructure/postgresql/: database.py
TelegramBot/: pyproject.toml
TelegramBot/innoid_telegram_bot/: config.py  main.py
(+167 files in other folders)
