[tool.poetry]
name = "innoid-core"
version = "0.1.0dev1"
description = ""
authors = ["Egor Kuziakov <egor.kuziakov@gmail.com>"]
readme = "README.md"
packages = [{include = "innoid_core"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.16"
sqlalchemy-utils = "^0.41.1"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
psycopg2 = "^2.9.6"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
