[tool.poetry]
name = "innoid-core"
version = "0.1.0dev1"
description = ""
authors = ["Egor Kuziakov <egor.kuziakov@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.20"
sqlalchemy-utils = "^0.41.1"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
requests = "^2.31.0"
passlib = "^1.7.4"
pyjwt = "^2.8.0"
psycopg2-binary = "^2.9.7"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
